force-app/main/default/objects/Navigation_Item__c/fields/NavigationType__c.field-meta.xml
<CustomField>
    <fullName>NavigationType__c</fullName>
    <label>NavigationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard__namedPage</fullName>
            </value>
            <value>
                <fullName>standard__navItemPage</fullName>
            </value>
            <value>
                <fullName>standard__appPage</fullName>
            </value>
            <value>
                <fullName>standard__recordPage</fullName>
            </value>
            <value>
                <fullName>standard__objectPage</fullName>
            </value>
            <value>
                <fullName>standard__recordRelationshipPage</fullName>
            </value>
            <value>
                <fullName>standard__webPage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>