force-app/main/default/objects/Navigation_Item__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>Page Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LandingPage</fullName>
                <default>true</default>
                <label>LandingPage</label>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Target Setting</fullName>
            </value>
            <value>
                <fullName>Carbon Accounting</fullName>
            </value>
            <value>
                <fullName>Supplier Management</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
            <value>
                <fullName>Net Zero Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>