force-app/main/default/objects/Navigation_Item__c/listViews/landing_Page_Items.listView-meta.xml
<ListView>
    <fullName>landing_Page_Items</fullName>
    <columns>NAME</columns>
    <columns>Section_Heading__c</columns>
    <columns>Sequence_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PageName__c</field>
        <operation>equals</operation>
        <value>LandingPage</value>
    </filters>
    <label>landing Page Items</label>
</ListView>