force-app/main/default/objects/Navigation_Item__c/listViews/Scope1_2_Carbon_Accounting_Page_Items.listView-meta.xml
<ListView>
    <fullName>Scope1_2_Carbon_Accounting_Page_Items</fullName>
    <columns>NAME</columns>
    <columns>Section_Heading__c</columns>
    <columns>Sequence_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PageName__c</field>
        <operation>equals</operation>
        <value>Carbon Accounting</value>
    </filters>
    <label>Scope1,2 Carbon Accounting Page Items</label>
</ListView>