force-app/main/default/objects/Navigation_Item__c/listViews/Setup_Items.listView-meta.xml
<ListView>
    <fullName>Setup_Items</fullName>
    <columns>NAME</columns>
    <columns>Section_Heading__c</columns>
    <columns>Sequence_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PageName__c</field>
        <operation>equals</operation>
        <value>Setup</value>
    </filters>
    <label>Setup Items</label>
</ListView>