force-app/main/default/objects/Navigation_Item__c/listViews/target_setting_Page_Items.listView-meta.xml
<ListView>
    <fullName>target_setting_Page_Items</fullName>
    <columns>NAME</columns>
    <columns>Section_Heading__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>Icon_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PageName__c</field>
        <operation>equals</operation>
        <value>Target Setting</value>
    </filters>
    <label>target setting Page Items</label>
</ListView>